--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -4,9 +4,9 @@
     {{>modal/modal-block}}
     {{>header/header-block}}
   </div>
-  <main class="main-members">
-    <h1 class="title-members">SongBirdie</h1>
-    <div id="song-list-box">
+  <main class="members-main">
+    <h1 class="members-title">SongBirdie</h1>
+    <div id="members-song-list">
 
     </div>
 
