--- a/views/createSong.handlebars
+++ b/views/createSong.handlebars
@@ -9,11 +9,11 @@
     </div>
 
     {{!-- Main body of the page --}}
-    <main class="main-song">
+    <main class="form-main">
         {{!-- Title --}}
-        <h1 class="song-name">Add Song</h1>
+        <h1 class="form-header">Add Song</h1>
         {{!-- Text --}}
-        <p class="song-text">Fill in the fields below and add this song to your SongBook</p>
+        <p class="form-text">Fill in the fields below and add this song to your SongBook</p>
         {{!-- Form --}}
         <form class="create-song">
             {{!-- Button --}}
@@ -21,49 +21,49 @@
                 <button class="buttons" type="submit" value="Submit">Add Song</button>
             </div>    
                 {{!-- Inputs --}}
-            <div class="create-input-box">
+            <div class="input-box">
                 <label class="input-labels" for="title">Title name:</label><br><br>
                 {{!-- Alert Msg --}}
                 <div style="display: none" id="alert-title" class="alert alert-danger" role="alert">
                     <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
                     <span class="sr-only">Error:</span> <span class="msg"></span>
                 </div>
-                <input type="text" id="title" class="create-inputs" name="titlename"
+                <input type="text" id="title" class="input" name="titlename"
                     placeholder="Example: Catch Hell Blues"><br>
             </div>
-            <div class="create-input-box">
+            <div class="input-box">
                 <label class="input-labels" for="artist">Artist name:</label><br>
                 {{!-- Alert Msg --}}
                 <div style="display: none" id="alert-artist" class="alert alert-danger" role="alert">
                     <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
                     <span class="sr-only">Error:</span> <span class="msg"></span>
                 </div>
-                <input type="text" id="artist" class="create-inputs" name="artistname"
+                <input type="text" id="artist" class="input" name="artistname"
                     placeholder="Example: The White Stripes"><br><br>
             </div>
-            <div class="create-input-box">
+            <div class="input-box">
                 <label class="input-labels" for="tempo">Tempo:</label><br>
                 {{!-- Alert Msg --}}
                 <div style="display: none" id="alert-tempo" class="alert alert-danger" role="alert">
                     <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
                     <span class="sr-only">Error:</span> <span class="msg"></span>
                 </div>
-                <input type="text" id="tempo" class="create-inputs" name="temponame"
+                <input type="text" id="tempo" class="input" name="temponame"
                     placeholder="(BPM between 60 and 200) Example: 96"><br>
             </div>
-            <div class="create-input-box">
+            <div class="input-box">
                 <label class="input-labels" for="key">Key:</label><br>
-                <input type="text" id="key" class="create-inputs" name="keyname" placeholder="Example: A major"><br><br>
+                <input type="text" id="key" class="input" name="keyname" placeholder="Example: A major"><br><br>
             </div>
             <div class="chords-box">
                 <label for="chords"></label><br>
-                <textarea id="chords" class="create-chords tinymce" rows="6" ccols="50" name="chordsname" placeholder="Chords: 
+                <textarea id="chords" class="chords tinymce" rows="6" ccols="50" name="chordsname" placeholder="Chords: 
                 A, Bm, C#m, D, E, F#m, and G#dim"></textarea><br><br>
             </div>
 
             <div class="lyrics-box">
                 <label for="lyrics"></label><br>
-                <textarea id="lyrics" class="create-lyrics tinymce" rows="25" cols="50" name="lyricsname" placeholder="Lyrics: 
+                <textarea id="lyrics" class="lyrics tinymce" rows="25" cols="50" name="lyricsname" placeholder="Lyrics: 
             If you really want some hot water,
             I can help you find it.
             Oh Oh Ah yeah
