--- a/views/updateSong.handlebars
+++ b/views/updateSong.handlebars
@@ -12,11 +12,11 @@
     </div>
 
     {{!-- Main body of the page --}}
-    <main class="main-song">
+    <main class="form-main">
         {{!-- Title --}}
-        <h1 class="song-name">Update<br>Song</h1>
+        <h1 class="form-header">Update<br>Song</h1>
         {{!-- Text --}}
-        <p class="song-text"></p>Update your song here and save it to your songbook.</p>
+        <p class="form-text">Update your song here and save it to your songbook.</p>
         {{!-- Form --}}
         <form class="update-song" data-id="{{dataValues.id}}">
             {{!-- Button --}}
@@ -24,36 +24,36 @@
                 <button class="buttons" type="submit" value="Submit">Update</button>
             </div>
             {{!-- Inputs --}}
-            <div class="create-input-box">
+            <div class="input-box">
                 <label class="input-labels" for="title">Title name:</label><br>
                 {{!-- Alert Msg --}}
                 <div style="display: none" id="alert-title" class="alert alert-danger" role="alert">
                     <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
                     <span class="sr-only">Error:</span> <span class="msg"></span>
                 </div>
-                <input size="47.5" type="text" id="title" class="create-inputs" name="titlename" value="{{dataValues.title}}"><br>
+                <input size="47.5" type="text" id="title" class="input" name="titlename" value="{{dataValues.title}}"><br>
             </div>
-            <div class="create-input-box">
+            <div class="input-box">
                 <label class="input-labels" for="artist">Artist name:</label><br>
                 {{!-- Alert Msg --}}
                 <div style="display: none" id="alert-artist" class="alert alert-danger" role="alert">
                     <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
                     <span class="sr-only">Error:</span> <span class="msg"></span>
                 </div>
-                <input size="47.5" type="text" id="artist" class="create-inputs" name="artistname" value="{{dataValues.artist}}"><br>
+                <input type="text" id="artist" class="input" name="artistname" value="{{dataValues.artist}}"><br>
             </div>
-            <div class="create-input-box">
+            <div class="input-box">
                 <label class="input-labels" for="tempo">Tempo:</label><br>
                 {{!-- Alert Msg --}}
                 <div style="display: none" id="alert-tempo" class="alert alert-danger" role="alert">
                     <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
                     <span class="sr-only">Error:</span> <span class="msg"></span>
                 </div>
-                <input size="47.5" type="text" id="tempo" class="create-inputs" name="temponame" value="{{dataValues.tempo}}"><br>
+                <input type="text" id="tempo" class="input" name="temponame" value="{{dataValues.tempo}}"><br>
             </div>
-            <div class="create-input-box">
+            <div class="input-box">
                 <label class="input-labels" for="key">Key:</label><br>
-                <input size="47.5" type="text" id="key" class="create-inputs" name="keyname" value="{{dataValues.songkey}}"><br><br>
+                <input type="text" id="key" class="input" name="keyname" value="{{dataValues.songkey}}"><br><br>
             </div>
             <div class="chords-box">
                 <label for="chords"></label><br>
