--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -30,4 +30,4 @@
 </div> {{!-- end hero_box --}}
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script type="text/javascript" src="js/signup.js"></script>
+<script type="text/javascript" src="js/signup.min.js"></script>
