--- a/views/updateSong.handlebars
+++ b/views/updateSong.handlebars
@@ -69,4 +69,4 @@
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script type="text/javascript" src="/js/song.js"></script>
+<script type="text/javascript" src="/js/song.min.js"></script>
